<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdCreateActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back"
            android:contentDescription="@string/none" />

        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_ads"
            android:layout_toEndOf="@id/toolbarBackBtn"
            android:layout_toStartOf="@id/addImageBtn"
            style="@style/TextAppearance.MaterialComponents.Body1"/>


        <ImageButton
            android:id="@+id/addImageBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/round_add_a_photo"
            android:contentDescription="@string/none" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/lightgray"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarRl"
        android:layout_above="@id/postAdBtn"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- TextView : Justa show a label text -->
            <TextView
                android:id="@+id/imagesLabelTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listPics"
                style="@style/TextAppearance.MaterialComponents.Body1"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagesLabelTv"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/row_images_picked"
                app:spanCount="4"/>
            <!--brand selector-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/brandTil"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagesRv"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:hint="@string/brand">
                <AutoCompleteTextView
                    android:id="@+id/brandEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--category selector-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryTil"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/brandTil"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:hint="@string/category">
                
                <AutoCompleteTextView
                    android:id="@+id/categoryAct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    tools:ignore="LabelFor" />
                
            </com.google.android.material.textfield.TextInputLayout>

            <!-- new list selector -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newListTil"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryTil"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:hint="Danh mục chi tiết"
                android:visibility="gone">

                <AutoCompleteTextView
                    android:id="@+id/newListAct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--condition selector-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conditionTil"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newListTil"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:hint="@string/condition">

                <AutoCompleteTextView
                    android:id="@+id/conditionAct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
            <!--location selector-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationTil"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/conditionTil"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:hint="@string/location">

                <AutoCompleteTextView
                    android:id="@+id/locationAct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
            <!--price inputlayout-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceTil"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/locationTil"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:hint="@string/price">
                <EditText
                    android:id="@+id/priceEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--title inputlayout-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_below="@id/priceTil"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:hint="@string/title">
                <EditText
                    android:id="@+id/titleEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--description inputlayout-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionTil"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:hint="@string/description"
                android:layout_below="@id/titleTil"
                android:layout_marginTop="10dp">
                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:id="@+id/descriptionEt"
                    android:minHeight="100dp"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>




        </RelativeLayout>



    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postAdBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_button_height"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        app:icon="@drawable/baseline_post_add"
        android:text="@string/create_ads"
        android:textAllCaps="true" />

</RelativeLayout>